2008-01-16  Neal H. Walfield  <neal@gnu.org>

	* thread.h (RM_thread_wait_object_destroyed): New define.
	(thread_wait_object_destroyed): New method.

	* folio.h (folio_object_alloc): Take additional parameter
	return_code.

2008-01-16  Neal H. Walfield  <neal@gnu.org>

	* futex.h: Include <hurd/startup.h>.
	(FUTEX_OP_CLEAR_WAKE_IF_GT_ONE): New marcro.
	(struct futex_return): New structure.
	(futex): Return a struct futex_return.  Don't panic, return the
	error code.  Update users.
	(futex_timed_wait): New function.

2008-01-16  Neal H. Walfield  <neal@gnu.org>

	* stddef.h (PAGE_SIZE): New macro.
	(PAGE_SHIFT): Likewise.
	(PAGE_MASK): Likewise.

2008-01-16  Neal H. Walfield  <neal@gnu.org>

	* rpc.h (ADD): Rename...
	(CPP_ADD): ... to this.  Update users.

2008-01-15  Neal H. Walfield  <neal@gnu.org>

	* futex.h (futex_wait): New file.
	* Makefile.am (includehurd_HEADERS): Add futex.h.
	* headers.m4: Link $(BUILDIR)/include/hurd/futex.h to futex.h.
	* RPC: Add futex message id assignment.

	* folio.h (struct folio): Add field wait_queue.  Remove field
	checksum (for now).

2008-01-15  Neal H. Walfield  <neal@gnu.org>

	* rpc.h (RPC_REPLY_): New macro.
	(RPC_SIMPLE): Generate reply stubs.
	(RPC): Likewise.

2008-01-04  Neal H. Walfield  <neal@gnu.org>

	* cap.h (OID_FMT): Prefix OID value with 0x.

2008-01-03  Neal H. Walfield  <neal@gnu.org>

	* mutex.h: Don't include <l4/ipc.h>.  Include <hurd/lock.h>.
	(struct ss_lock_trace): Move from here..
	* lock.h: ... to this new file.
	* mutex.h (SS_LOCK_TRACE_COUNT): Likewise.
	(ss_mutex_lock): Likewise.
	(ss_mutex_lock): Likewise.
	(SS_MUTEX_LOCK): Likewise.
	(SS_MUTEX_LOCK_WAIT): Likewise.
	(SS_MUTEX_UNLOCK): Likewise.
	(SS_MUTEX_TRYLOCK): Likewise.
	(SS_MUTEX_TRYLOCK_BLOCKED): Likewise.
	(ss_lock_trace_dump): Likewise.
	(ss_mutex_trace_add): Likewise.
	(ss_mutex_lock): To wait, call __ss_lock_wait.
	(ss_mutex_unlock): To wakeup a thread, use __ss_lock_wakeup.
	(ss_mutex_lock): New define.
	(ss_mutex_unlock): Likewise.